fixed losgstash redis host

--- a/logstash_kibana/config/logstash/shipper.config
+++ b/logstash_kibana/config/logstash/shipper.config
@@ -13,7 +13,7 @@ filter {
 
 output {
 	redis { 
-		host => 'docker_host' 
+		host => 'localhost' 
 		password => '123'
 		db => 1
 		data_type => 'channel' 
