--- a/nginx-php/config/nginx.conf
+++ b/nginx-php/config/nginx.conf
@@ -46,7 +46,7 @@ http {
         error_page   500 502 503 504  /50x.html;
 
         location ~ \.php$ {
-            fastcgi_pass   php-fpm:9000;
+            fastcgi_pass   HOST_IP:9000;
             fastcgi_index  index.php;
             fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
             include        fastcgi_params;
