--- a/logstash/config-dir/logstash.config
+++ b/logstash/config-dir/logstash.config
@@ -6,7 +6,7 @@ input {
 
 output {
     elasticsearch {
-        hosts => ['elasticsearch_a','elasticsearch_b','elasticsearch_c']
+        hosts => ['esa','esb','esc']
         index => "logstash-%{+YYYY.MM}"
     }
 }
