update logstash config

--- a/logstash/config-dir/logstash.config
+++ b/logstash/config-dir/logstash.config
@@ -6,7 +6,7 @@ input {
 
 output {
     elasticsearch {
-        hosts => ['esa','esb','esc']
+        hosts => ['prd-es-a','prd-es-b','prd-es-c']
         index => "logstash-%{+YYYY.MM}"
     }
 }
